--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,17 @@
-name: brainwave-logger
+name: brainwavelogger
 channels:
   - defaults
 dependencies:
   - python=3.12
-  - ipykernel=6.29.5
-  - matplotlib=3.10.0
-  - numpy=1.26.4
-  - pandas=2.3.1
-  - scikit-learn=1.7.1
-  - scipy=1.16.0
-  - seaborn=0.13.2
-  - tensorflow=2.18.1
-  - pylsl=1.17.6
+  - ipykernel=6.29
+  - matplotlib=3.10
+  - numpy=1.26
+  - pandas=2.3
+  - scikit-learn=1.7
+  - scipy=1.16
+  - seaborn=0.13
+  - tensorflow=2.18
+  - pytest=8.4
+  - pip=25.2
+  - pip:
+    - pylsl==1.17
